--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,17 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Hello im Sai Teja Im intrested in webapps 
+  button(type='button', class='btn btn-secondary', onclick='doBump()') Press Me
+  br
+  div#bump Bump the count 
+  br
+  
+  script.
+      var count=0;
+      var bump=1;
+      function doBump(){
+      count=count+bump;
+      bump=bump+1;
+      print=document.getElementById("bump");
+      print.innerHTML='Count '+count+' with bump '+bump;}
